# DeepSynth2

./: README.md  equivalent_classes_karel.json  gen_command_exp_control.sh  gen_command_exp_karel.sh  gen_eval_all_progs.sh  generate_dfta.sh  pyproject.toml  run_exp.sh  run_exp_control.sh  run_exp_karel.sh
.github/workflows/: tests.yaml
examples/: compare_enumeration.py  plot_enumeration_results.py  plot_helper.py  plot_rl.py  plot_rl_results.py  plot_solve_results.py
examples/pbe/: convert_to_psl.py  dataset_generator_unique.py  dsl_equation_generator.py  evaluate_deprecated.py  model_prediction.py  solve.py
examples/rl/: control_dsl.py  dsl_equation_generator.py  equivalence_classes_to_filter.py  eval_all.py  evaluate_tocsv.py  gen_programs.py  gpoe_automaton_to_grammar.py  pong_wrapper.py  program_evaluator.py  solve.py
grammars/: basic.grape  basic_with_csts.grape  filter.grape  filter_with_csts.grape
karel/: dataset.pickle  dataset_seed_1_beap_search_uniform_.csv  dataset_seed_1_beap_search_uniform_automatic.csv
results/acrobot/: progs_acrobot_basic_seed1.txt  progs_acrobot_basic_with_csts_seed1.txt  progs_acrobot_filter_seed1.txt
results/cart_pole/: _10_none_mab.csv  _10_none_none.csv  _10_sampling_mab.csv  _10_sampling_none.csv  _11_none_mab.csv  _11_none_none.csv  _11_sampling_mab.csv  _11_sampling_none.csv  _12_none_mab.csv  _12_none_none.csv  _12_sampling_mab.csv  _12_sampling_none.csv  _13_none_mab.csv  _13_none_none.csv  _13_sampling_mab.csv  _13_sampling_none.csv  _14_none_mab.csv  _14_none_none.csv  _14_sampling_mab.csv  _14_sampling_none.csv  (+119 more)
(+208 files in other folders)
