[project]
name = "synth"
version = "0.1.0"
description = "Automated Synthesis Framework"
authors = [
    { name = "Théo Matricon", email = "theomatricon@gmail.com" },
    { name = "Nathanaël Fijalkow", email = "nathanael.fijalkow@gmail.com" },
]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "torch>=1.13.1",
    "tensorboard>=0",
    "cython>=0.29",
    "numpy>=1.22",
    "vose",
    "colorama>=0.4.4",
    "tqdm>=4.63.0",
    "matplotlib>=3.5.1",
    "pltpublish>=0.1.0",
    "gymnasium[mujoco, box2d]",
    "ale-py>=0.10.2",
]

[project.urls]
Repository = "https://github.com/SynthesisLab/DeepSynth2"

[dependency-groups]
dev = [
    "ruff>= 0.4.3",
    "pytest>=7.2.0",
    "mypy>=0.910",
]

[tool.uv.sources]
vose = { git = "https://github.com/Theomat/vose.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
